rust/node-structuring/tests/snapshots/examples__figures-with-captions-after.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This document has figure captions after the image."
          }
        }
      ]
    },
    {
      "type": "Figure",
      "id": "fig-2a",
      "label": "2A",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Results from the experiment showing significant improvement."
              }
            }
          ]
        }
      ],
      "content": [
        {
          "type": "ImageObject",
          "contentUrl": "image.png",
          "caption": [
            {
              "type": "Text",
              "value": {
                "string": "Example image"
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This content should remain separate from the figure above."
          }
        }
      ]
    },
    {
      "type": "Figure",
      "id": "fig-s1",
      "label": "S1",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Additional visualization from supplementary materials."
              }
            }
          ]
        }
      ],
      "content": [
        {
          "type": "ImageObject",
          "contentUrl": "supp-image.png",
          "caption": [
            {
              "type": "Text",
              "value": {
                "string": "Supplementary data"
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Figure",
      "id": "fig-s3",
      "label": "S3",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Supporting information figure with colon separator."
              }
            }
          ]
        }
      ],
      "content": [
        {
          "type": "ImageObject",
          "contentUrl": "si-image.png",
          "caption": [
            {
              "type": "Text",
              "value": {
                "string": "SI data"
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Figure",
      "id": "fig-s2",
      "label": "S2",
      "labelAutomatically": false,
      "caption": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Common pattern in scientific publications."
              }
            }
          ]
        }
      ],
      "content": [
        {
          "type": "ImageObject",
          "contentUrl": "extended-image.png",
          "caption": [
            {
              "type": "Text",
              "value": {
                "string": "Extended data visualization"
              }
            }
          ]
        }
      ]
    }
  ]
}
